# mapmaker

./: .gitignore  Cargo.toml  README.md
src/: color_list.rs  init_commands.in  init_summon.in  loop_commands.in  loop_scoreboard.in  main.rs  main_old.rs
src/cli/: constants.rs  mod.rs
src/image_processor/: colors.rs  mod.rs
src/output_generator/: mod.rs
src/output_generator/datapacks/: mod.rs
src/output_generator/datapacks/mapmaker/functions/templates/: header.in  init_commands.in  init_summon.in  loop_scoreboard.in  restart.in
src/output_generator/datapacks/minecraft/tags/functions/: tick.json
