[package]
name = "mapmaker"
version = "0.3.0"
authors = ["Jason Yuan <jason.yuan869@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
hematite-nbt = "0.5.2"
num_cpus = "1.13.0"
num = "0.4.0"

[profile.release]
lto = true
