[package]
name = "mapmaker"
version = "0.3.0"
authors = ["Jason Yuan <jason.yuan869@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
hematite-nbt = "0.5.2"
rayon = "1.5.1"
anyhow = "1.0.66"
kd-tree = "0.5.1"
typenum = "1.16.0"
inquire = "0.6.2"
indicatif = { version = "0.17.4", features = ["rayon"] }
lazy_static = "1.4.0"

[profile.release]
lto = true
